--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.1.9",
     "next": "13.1.6",
     "react": "18.2.0",
